--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -117,6 +117,29 @@
       ansible.builtin.set_fact:
         newly_created_pat: "{{ git_token }}"
 
+    - name: 1. Use controller_api lookup to filter Job Templates by Name
+      # Path: 'job_templates' is the API endpoint.
+      # Query: The 'name' parameter filters the results on the server-side.
+      set_fact:
+        jt_lookup_result: >
+          {{ lookup(
+            'awx.awx.controller_api',
+            'job_templates',
+            query_parameters={
+              'name': 'Demo Job Template'
+            },
+            controller_host=aap_host,
+            controller_username=aap_username,
+            controller_password=aap_password,
+            # Use environment variable CONTROLLER_VERIFY_SSL for cert validation
+            verify_ssl=aap_verify_ssl
+          ) }}
+
+    - name: 4. Display Recovered Information
+      ansible.builtin.debug:
+        msg: "{{jt_lookup_result}}"
+
+    # https://example-ansible-automation-platform.apps-crc.testing/api/controller/v2/job_templates/7/webhook_key/
 
     # =========================================================================
     # 1. Tareas de Creación de Repositorio y Webhook (Usando el nuevo PAT)
