Change info webhook

--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -128,10 +128,10 @@
             query_parameters={
               'name': 'Demo Job Template'
             },
-            controller_host=aap_host,
-            controller_username=aap_username,
-            controller_password=aap_password,
-            verify_ssl=aap_verify_ssl
+            controller_host={{aap_host}},
+            controller_username={{aap_username}},
+            controller_password={{aap_password}},
+            verify_ssl={{aap_verify_ssl}}
           ) }}
 
     - name: 4. Display Recovered Information
