--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -119,7 +119,7 @@
 
     - name: 4. Display Recovered Information
       ansible.builtin.debug:
-        msg: "{{aap_host}} - {{aap_username}} - {{aap_password}}"
+        msg: "{{aap_hostname}} - {{aap_username}} - {{aap_password}} - {{aap_validate_certs}}"
 
     - name: 1. Use controller_api lookup to filter Job Templates by Name
       # Path: 'job_templates' is the API endpoint.
