Change info webhook

--- a/inizializer-project-playbook.yaml
+++ b/inizializer-project-playbook.yaml
@@ -121,8 +121,8 @@
     - name: ✅ Wait for the URL to be available (HTTP 200)
       ansible.builtin.uri:
         url: "https://{{aap_hostname}}/api/controller/v2/job_templates/?search={{job_Template_lifecycle| urlencode}}"
-        user: "{{ aap_username }}"
-        password: "{{ aap_password }}"
+        headers:
+          Authorization: "{{ oauth_token }}"
         method: GET
         status_code: 200 # The desired HTTP status code
         validate_certs: "{{aap_validate_certs}}" # Set to true if using proper SSL/TLS certificates
